<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:weightSum="10"
    android:layout_margin="3dp"
    >
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:layout_margin="3dp"
        >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="9"
            android:padding="5dp"
            >
            <TextView
                android:id="@+id/tvJobName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvJobNameText"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                />

            <TextView
                android:id="@+id/tvHoursWorked"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvHoursWorkedText"
                android:textSize="18sp"
                android:textColor="@color/colorPrimaryDark"
                />
        </LinearLayout>

        <ImageButton
            android:id="@+id/ibDelete"
            android:contentDescription="@string/ibDeleteCD"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:background="@android:color/white"
            android:src="@drawable/ic_clear_black_24dp"
            android:tint="@color/colorAccent"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/line_separator"
        android:layerType="software"
        />

</LinearLayout>